# mercator

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  GOALS.md  README.md  mercator.toml.example
.claude/skills/mercator/: SKILL.md
.github/workflows/: ci.yml  homebrew-bump.yml
docs/: STATUS.md  TICKET_CONTRACT.md
docs/decisions/: 0001-sqlite-staged-migration.md  0002-fts5-default-mode-and-token-quoting.md  0003-source-trait-enum-dispatch.md  0004-tdd-discipline.md  README.md
src/: agent.rs  config.rs  db.rs  main.rs  markdown.rs  project.rs  readme.rs  skills.rs  sources.rs  tags_graph.rs  ticket.rs
