[package]
name = "mercator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.7"
tower-http = { version = "0.6.8", features = ["fs"] }
walkdir = "2.5.0"
