[package]
name = "mercator"
version = "0.7.5"
edition = "2021"
description = "Cartography for your local development landscape — Rust CLI + web dashboard that maps your projects across local dirs, GitHub, GitLab, and Obsidian."
license = "MIT"
repository = "https://github.com/zot24/mercator"
homepage = "https://github.com/zot24/mercator"
readme = "README.md"

[features]
default = []
# Enables the in-dashboard agent runner backed by the local `swarm` crate.
#
# `swarm` is not yet published or vendored, so the dep is *not* declared in
# this manifest. To use the agent runner locally, add the path dep manually
# to the `[dependencies]` block below and build with `--features swarm`:
#
#     [dependencies]
#     swarm = { path = "../swarm" }
#
#     $ cargo build --features swarm
#
# Default builds (CI, Docker, `cargo install`) skip all agent code so they
# don't require the sibling `../swarm` directory. Tracked in #21.
swarm = []

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
dirs = "6.0.0"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6.8", features = ["fs"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.13"
